updates: tie together refreshing between app and notifier

this implements a two-way notification system.

- discover tells the notifier to refresh its state whenever it itself
has refreshed the state
- the notifier does the same but only if the user actually clicked
refresh

this is implemented using dbus broadcasts so we don't have to do
excessive service watching. each component will simply fire a broadcast
and the respective other end will act on it, if it is running.

BUG: 473758